@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.109 2005/03/26 07:54:18 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.110 2005/03/26 20:11:49 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
+  26 Mar 2005; Preston Cody <codeman@gentoo.org>
+  Changed the print statements to logging in the partitioning BE code.
+  the logger may need to be imported to the x86archtemplate. unknown yet.
+  
   25 Mar 2005; Preston Cody <codeman@gentoo.org>
   changed InstallProfile to remove is_uri check on kernel, stage, and portage
   URIs.  The blank uri check has been commented out.
